--- a/ml-frontend/src/App.css
+++ b/ml-frontend/src/App.css
@@ -1,38 +1,49 @@
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #121212; 
+  color: #ffffff; 
+}
+
 .App {
   text-align: center;
+  padding-top: 20px; 
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.upload-form {
+  margin-top: 10px; 
+
+  background-color: #1e1e1e; 
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input[type="file"] {
+  margin: 10px 0;
+  background-color: #2a2a2a; 
+  color: #fff;
+  border: 1px solid #666;
+  padding: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button {
+  background-color: #6200ea; 
   color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 4px;
 }
 
-.App-link {
-  color: #61dafb;
+button:disabled {
+  background-color: #cccccc;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.result {
+  margin-top: 20px;
+  font-size: 1.2em;
+  color: #00e676;
 }
